--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
             <h4>Best Song For Tour</h4>
             <audio  controls src="audio.mp3"></audio>
         </section>
+        <section>
+            <h4>Video You Have to Watch</h4>
+            <video width="300px" controls src="video.mp4"></video>
+        </section>
+        <section>
+            <h4>Youtube Video</h4>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/co_Ecs8VH5A?si=eLH6JcKCWZmZm540" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
     </article>
     <footer>
         <p>
